name:                elm-export
version:             0.6.0.1
synopsis:            A library to generate Elm types from Haskell source.
description:         Generate Elm source code automatically from Haskell types. Using GHC.Generics, we can automatically derive Elm type declarations, and Aeson-compatible JSON decoders & encoders.
homepage:            http://github.com/krisajenkins/elm-export
stability:           alpha
license:             OtherLicense
license-file:        LICENSE.txt
author:              Kris Jenkins
maintainer:          kris.jenkins@clearercode.com
copyright:           2015-2017 Kris Jenkins
category:            Web
build-type:          Simple
extra-source-files:  test/*.elm
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Elm
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , formatting
                     , mtl
                     , semigroups
                     , text
                     , time
                     , wl-pprint-text
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules: Elm.Type
               , Elm.Common
               , Elm.Decoder
               , Elm.Encoder
               , Elm.File
               , Elm.Record

test-suite elm-export-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ExportSpec
                     , TypesSpec
  build-depends:       Diff
                     , HUnit
                     , QuickCheck
                     , base
                     , bytestring
                     , containers
                     , elm-export
                     , hspec
                     , hspec-core
                     , quickcheck-instances
                     , text
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krisajenkins/elm-export
